--- a/index.html
+++ b/index.html
@@ -1,1 +1,175 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <title>História em Pílulas</title>
+
+  <!-- PWA -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#0f172a">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <style>
+    :root {
+      --bg: #020617;
+      --glass: rgba(255,255,255,0.08);
+      --border: rgba(255,255,255,0.15);
+      --text: #e5e7eb;
+      --muted: #9ca3af;
+      --accent: #38bdf8;
+      --radius: 16px;
+    }
+
+    * { box-sizing: border-box; }
+
+    body {
+      margin: 0;
+      padding: 20px;
+      min-height: 100vh;
+      font-family: -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
+      background: radial-gradient(circle at top, #111827, #020617);
+      color: var(--text);
+    }
+
+    h1 {
+      font-size: 1.6rem;
+      margin-bottom: 4px;
+    }
+
+    .subtitle {
+      color: var(--muted);
+      margin-bottom: 20px;
+    }
+
+    .progress {
+      width: 100%;
+      height: 8px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 999px;
+      overflow: hidden;
+      margin-bottom: 24px;
+    }
+
+    .progress-bar {
+      height: 100%;
+      width: 0%;
+      background: linear-gradient(90deg, #38bdf8, #22d3ee);
+      transition: width 0.3s ease;
+    }
+
+    .card {
+      background: var(--glass);
+      backdrop-filter: blur(14px);
+      -webkit-backdrop-filter: blur(14px);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 18px;
+      margin-bottom: 16px;
+      cursor: pointer;
+      transition: transform 0.15s ease, border-color 0.15s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-2px);
+      border-color: rgba(255,255,255,0.25);
+    }
+
+    .card.completed {
+      border-color: rgba(56,189,248,0.6);
+    }
+
+    .card h2 {
+      margin: 0;
+      font-size: 1.1rem;
+    }
+
+    .card-content {
+      margin-top: 12px;
+      color: var(--muted);
+      line-height: 1.5;
+      display: none;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 0.8rem;
+      color: var(--muted);
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Mesopotâmia</h1>
+  <p class="subtitle">Microlearning em História · 64 lições</p>
+
+  <div class="progress">
+    <div class="progress-bar" id="progressBar"></div>
+  </div>
+
+  <div id="lessons"></div>
+
+  <footer>
+    Funciona offline · Adicione à tela inicial
+  </footer>
+
+  <script>
+    const lessonsContainer = document.getElementById("lessons");
+    const progressBar = document.getElementById("progressBar");
+
+    const progress = JSON.parse(localStorage.getItem("progress")) || {};
+
+    fetch("lessons.json")
+      .then(res => res.json())
+      .then(data => {
+        const lessons = data.lessons;
+
+        lessons.forEach(lesson => {
+          const card = document.createElement("div");
+          card.className = "card";
+
+          if (progress[lesson.id]) {
+            card.classList.add("completed");
+          }
+
+          card.innerHTML = `
+            <h2>${lesson.title}</h2>
+            <div class="card-content">${lesson.content}</div>
+          `;
+
+          card.addEventListener("click", () => {
+            const content = card.querySelector(".card-content");
+            const opened = content.style.display === "block";
+
+            content.style.display = opened ? "none" : "block";
+
+            if (!progress[lesson.id]) {
+              progress[lesson.id] = true;
+              localStorage.setItem("progress", JSON.stringify(progress));
+              card.classList.add("completed");
+              updateProgress(lessons.length);
+            }
+          });
+
+          lessonsContainer.appendChild(card);
+        });
+
+        updateProgress(lessons.length);
+      });
+
+    function updateProgress(total) {
+      const completed = Object.keys(progress).length;
+      const percent = Math.round((completed / total) * 100);
+      progressBar.style.width = percent + "%";
+    }
+
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("sw.js");
+    }
+  </script>
+
+</body>
+</html>
