--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>História Microlearning</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icon-192.png" sizes="192x192">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>História Microlearning</title>
+<link rel="stylesheet" href="style.css">
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="icon-192.png" sizes="192x192">
 </head>
 <body>
-  <header>
-    <h1>História Microlearning</h1>
-  </header>
+<header>
+  <h1>História Microlearning</h1>
+</header>
 
-  <main id="civilizations-container">
-    <!-- Civilizações carregadas via JS -->
-  </main>
+<main id="container">
+  <!-- Cards de civilizações serão gerados aqui -->
+</main>
 
-  <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
