Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <meta name="theme-color" content="#0f172a" />
 </head>
 <body>
-
   <div id="app">
-    <header>
-      <h1>História</h1>
+    <header class="topbar">
+      <h1 class="app-title">História</h1>
     </header>
 
     <main id="view"></main>
